--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
           </div>
         </div>
       </div>
-  
+  <!-- trigger GitHub Pages -->
       <div class="project fade-in">
         <img src="images/ship.png" alt="Cyber icon" class="project-icon-img" height="150px" width="160px" />
         <div class="project-text">
